--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,8 @@
  
 @layer base {
   :root {
+    font-family: 'Poppins';
+    
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
  
@@ -19,7 +21,7 @@
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
  
-    --primary: 240 5.9% 10%;
+    --primary: 238 47% 54%;
     --primary-foreground: 0 0% 98%;
  
     --secondary: 240 4.8% 95.9%;
@@ -52,7 +54,7 @@
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
  
-    --primary: 0 0% 98%;
+    --primary: 238 47% 54%;
     --primary-foreground: 240 5.9% 10%;
  
     --secondary: 240 3.7% 15.9%;
